crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__include_1.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/mod.rs
assertion_line: 392
expression: "goto_definition(r#\"\n%! main.sp\n#include \"foo.sp\"\n           |\n           ^\n\n%! foo.sp\nint foo;\nint bar;\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 17
      }
    },
    "targetUri": "file:///foo.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 1,
        "character": 8
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 1,
        "character": 8
      }
    }
  }
]
